Create grid layout for entire webpage
The layout for the entire page can be represented by a grid layout
of two columns, one column for the navigation and one column for
the dashboard itself. This structure has been added, with the dash-
board being four times as wide as the navigation column. The two
columns have been given a background color to visualize them.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div>Hello, world!</div>
+    <div class="container">
+        <div class="nav"></div>
+        <div class="dashboard"></div>
+    </div>
 </body>
 </html>
