--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <div class="nav"></div>
+        <div class="header"></div>
         <div class="dashboard"></div>
+
     </div>
 </body>
 </html>
