Create structure for navigation section
The navigation section can also be represented by a grid and
subgrids. The navigation section itself is a grid with one column
and this grid has three subgrids for each navigation section. These
subgrids have two columns, one for the icon and one for the name.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
 </head>
 <body>
     <div class="container">
-        <div class="nav"></div>
+        <div class="nav">
+            <div class="nav-section">
+                <div>p</div>
+                <div>Dashboard</div>
+            </div>
+            <div class="nav-section">
+                <div>p</div>
+                <div>Home</div>
+                <div>p</div>
+                <div>Profile</div>
+                <div>p</div>
+                <div>Messages</div>
+                <div>p</div>
+                <div>History</div>
+                <div>p</div>
+                <div>Tasks</div>
+                <div>p</div>
+                <div>Communities</div>
+            </div>
+            <div class="nav-section">
+                <div>p</div>
+                <div>Settings</div>
+                <div>p</div>
+                <div>Support</div>
+                <div>p</div>
+                <div>Privacy</div>
+            </div>
+        </div>
         <div class="header"></div>
         <div class="dashboard"></div>
-
     </div>
 </body>
 </html>
