Create structure for second row of header
As mentioned, the second row of the header is its own grid. It
contains two columns and each column is a subgrid parent.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
                     <div>Morgan Oakley</div>
                 </div>
             </div>
-            <div class="second-row"></div>
+            <div class="second-row">
+                <div class="account">
+                    <div></div>
+                    <div>Hi there,</div>
+                    <div>Morgan Oakley (@morgan)</div>
+                </div>
+                <div class="buttons">
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+            </div>
         </div>
         <div class="dashboard"></div>
     </div>
