Create structure for dashboard content
The dashboard itself is represented by a grid with two columns.
Then, the projects section is a subgrid with two columns and the
miscellaneous section with announcements and trending content is
a grid with one column. The cards in both sections are also
represented by grids and subgrids.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,111 @@
                     <div>Morgan Oakley (@morgan)</div>
                 </div>
                 <div class="buttons">
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
         </div>
-        <div class="dashboard"></div>
+        <div class="dashboard">
+            <div class="projects">
+                <div>Your Projects</div>
+                <div class="card">
+                    <div>Super Cool Project</div>
+                    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga explicabo nemo perferendis, eius distinctio eos a blanditiis, quibusdam ea laudantium deserunt praesentium incidunt! Nostrum explicabo minima quod excepturi recusandae quidem!</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Less Cool Project</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, iusto! Totam placeat beatae quia officiis nam! Deserunt, inventore quos! Totam, minima at voluptatum blanditiis iusto adipisci laudantium in impedit omnis.</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Impossible App</div>
+                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos officiis fugit aspernatur quasi a quia officia excepturi possimus, repellendus nesciunt adipisci, ipsum odio. Quidem qui tempora culpa, rerum voluptate ullam.</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Easy Peasy App</div>
+                    <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad explicabo perspiciatis doloremque odit provident enim cum sequi fugit exercitationem. Laborum voluptatum ratione commodi earum amet dolorem minus voluptate ut natus?</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Ad Blocker</div>
+                    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores deserunt nesciunt corporis ducimus fuga! Amet, perspiciatis nisi? Iusto ea voluptate, modi explicabo mollitia eius rerum praesentium vero dolorem sunt eligendi.</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>Money Maker</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem ipsam! Laudantium esse nihil repudiandae, quas rerum possimus pariatur cupiditate unde itaque ipsum, illum aliquid excepturi ut aperiam maiores at?</div>
+                    <div class="icons">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="misc">
+                <div>Announcements</div>
+                <div class="block announcements">
+                    <div>
+                        <div>Site Maintenance</div>
+                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, nisi. Veniam dolor iste quo distinctio natus, omnis voluptates perferendis sapiente facere voluptatibus vel ex recusandae quasi facilis magnam aliquam! Libero!</div>
+                    </div>
+                    <div>
+                        <div>Community Share Day</div>
+                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos commodi, totam ullam suscipit, dignissimos qui illo numquam dolorem exercitationem quod magni eum error odit dicta voluptate iste tenetur eos nemo!</div>
+                    </div>
+                    <div>
+                        <div>Updated Privacy Policy</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vitae voluptatem, reprehenderit perferendis, ea laborum deleniti maxime quidem iste modi saepe labore culpa dignissimos amet molestias autem. Sit, blanditiis. Eos.</div>
+                    </div>
+                </div>
+                <div>Trending</div>
+                <div class="block trending">
+                    <div>
+                        <div class="pfp"></div>
+                        <div>@tegan</div>
+                        <div>World Peace Builder</div>
+                    </div>
+                    <div>
+                        <div class="pfp"></div>
+                        <div>@morgan</div>
+                        <div>Super Cool Project</div>
+                    </div>
+                    <div>
+                        <div class="pfp"></div>
+                        <div>@Kendall</div>
+                        <div>Life Changing App</div>
+                    </div>
+                    <div>
+                        <div class="pfp"></div>
+                        <div>@alex</div>
+                        <div>No Traffic Maker</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
