Add styling to navigation sidebar
The HTML structure had already been created for the navigation
section, but it lacked logos and styling. Styling has been added,
including increasing spacing and font sizes and centering items
relative to each other. Additionally, the background color has
been changed and the image placeholders have been replaces with
actual images for the logos.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <div class="container">
         <div class="nav">
             <div class="nav-section">
-                <div>p</div>
+                <img src="./img/dashboard.svg" alt="Dashboard">
                 <div>Dashboard</div>
             </div>
             <div class="nav-section">
-                <div>p</div>
+                <div><img src="./img/home.svg" alt="Home"></div>
                 <div>Home</div>
-                <div>p</div>
+                <div><img src="./img/profile.svg" alt="Profile"></div>
                 <div>Profile</div>
-                <div>p</div>
+                <div><img src="./img/messages.svg" alt=""></div>
                 <div>Messages</div>
-                <div>p</div>
+                <div><img src="./img/history.svg" alt=""></div>
                 <div>History</div>
-                <div>p</div>
+                <div><img src="./img/tasks.svg" alt=""></div>
                 <div>Tasks</div>
-                <div>p</div>
+                <div><img src="./img/communities.svg" alt=""></div>
                 <div>Communities</div>
             </div>
             <div class="nav-section">
-                <div>p</div>
+                <div><img src="./img/settings.svg" alt=""></div>
                 <div>Settings</div>
-                <div>p</div>
+                <div><img src="./img/support.svg" alt=""></div>
                 <div>Support</div>
-                <div>p</div>
+                <div><img src="./img/privacy.svg" alt=""></div>
                 <div>Privacy</div>
             </div>
         </div>
