Add styling to header
Before, only the structure was in place for the header. Now, it has
been styled. Styling includes modifying background colors, adding
images and icons, increasing spacing, and changing border radii of
elements.

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
         <div class="header">
             <div class="first-row">
                 <div class="search">
-                    <div></div>
-                    <input type="search">
+                    <img src="./img/search.svg" alt="Search">
+                    <input type="search" name="search" id="search">
                 </div>
                 <div class="account">
-                    <div></div>
-                    <div></div>
-                    <div>Morgan Oakley</div>
+                    <img src="./img/notifications.svg" alt="Notifications">
+                    <img src="./img/hannah.JPG" alt="Profile picture">
+                    <div>Hannah Cummings</div>
                 </div>
             </div>
             <div class="second-row">
                 <div class="account">
-                    <div></div>
+                    <img src="./img/hannah.JPG" alt="">
                     <div>Hi there,</div>
-                    <div>Morgan Oakley (@morgan)</div>
+                    <div>Hannah Cummings (@hannah)</div>
                 </div>
                 <div class="buttons">
                     <button>New</button>
