Add styling to dashboard
The box shadows, spacing, font sizes, colors, borders, and image
assets have been updated in order to style the dashboard section.
The trending and announcements column does not change size as the
browser is resized, but the project cards section does. There is
a minimum width that the entire grid will not shrink below, cotrolled
by the size of the content. The number of lines in each project card
is kept constant and the extra text is clipped and hidden so that
the cards do not grow in height as the browser's width decreases.

--- a/index.html
+++ b/index.html
@@ -68,54 +68,54 @@
                     <div>Super Cool Project</div>
                     <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga explicabo nemo perferendis, eius distinctio eos a blanditiis, quibusdam ea laudantium deserunt praesentium incidunt! Nostrum explicabo minima quod excepturi recusandae quidem!</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
                 <div class="card">
                     <div>Less Cool Project</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, iusto! Totam placeat beatae quia officiis nam! Deserunt, inventore quos! Totam, minima at voluptatum blanditiis iusto adipisci laudantium in impedit omnis.</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
                 <div class="card">
                     <div>Impossible App</div>
                     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos officiis fugit aspernatur quasi a quia officia excepturi possimus, repellendus nesciunt adipisci, ipsum odio. Quidem qui tempora culpa, rerum voluptate ullam.</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
                 <div class="card">
                     <div>Easy Peasy App</div>
                     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad explicabo perspiciatis doloremque odit provident enim cum sequi fugit exercitationem. Laborum voluptatum ratione commodi earum amet dolorem minus voluptate ut natus?</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
                 <div class="card">
                     <div>Ad Blocker</div>
                     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores deserunt nesciunt corporis ducimus fuga! Amet, perspiciatis nisi? Iusto ea voluptate, modi explicabo mollitia eius rerum praesentium vero dolorem sunt eligendi.</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
                 <div class="card">
                     <div>Money Maker</div>
                     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, voluptatem ipsam! Laudantium esse nihil repudiandae, quas rerum possimus pariatur cupiditate unde itaque ipsum, illum aliquid excepturi ut aperiam maiores at?</div>
                     <div class="icons">
-                        <div class="icon"></div>
-                        <div class="icon"></div>
-                        <div class="icon"></div>
+                        <img src="./img/like.svg" alt="Like">
+                        <img src="./img/watch.svg" alt="Watch">
+                        <img src="./img/fork.svg" alt="Fork">
                     </div>
                 </div>
             </div>
@@ -138,22 +138,22 @@
                 <div>Trending</div>
                 <div class="block trending">
                     <div>
-                        <div class="pfp"></div>
+                        <img src="./img/dog1.jpg" alt="Profile picture">
                         <div>@tegan</div>
                         <div>World Peace Builder</div>
                     </div>
                     <div>
-                        <div class="pfp"></div>
-                        <div>@morgan</div>
+                        <img src="./img/hannah.JPG" alt="Profile picture">
+                        <div>@hannah</div>
                         <div>Super Cool Project</div>
                     </div>
                     <div>
-                        <div class="pfp"></div>
+                        <img src="./img/dog2.jpg" alt="Profile picture">
                         <div>@Kendall</div>
                         <div>Life Changing App</div>
                     </div>
                     <div>
-                        <div class="pfp"></div>
+                        <img src="./img/dog3.jpg" alt="Profile picture">
                         <div>@alex</div>
                         <div>No Traffic Maker</div>
                     </div>
